--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,6 @@ Flask>=2.0
 
 # Web Scraping
 requests>=2.25
-beautifulsoup4>=4.9
-duckduckgo_search>=5.0 # Check for latest version
 
 # API Client for LLM
 together>=1.0 # Check for latest version
@@ -14,4 +12,15 @@ python-dotenv>=1.0 # For managing API keys
 statistics # Standard library
 plotly>=5.0 # For plotting
 
-# Consider adding gunicorn or waitress for production deployment
+beautifulsoup4==4.13.4
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+duckduckgo_search==8.0.0
+idna==3.10
+lxml==5.3.2
+primp==0.14.0
+requests==2.32.3
+soupsieve==2.6
+typing_extensions==4.13.2
+urllib3==2.4.0
